tests/baselines/reference/chained2.errors.txt
/d.ts(2,11): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
/d.ts(3,11): error TS1361: 'B' cannot be used as a value because it was imported using 'import type'.
/d.ts(4,7): error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.
/d.ts(5,7): error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.


==== /a.ts (0 errors) ====
    class A { a!: string }
    export type { A as default };
    
==== /b.ts (0 errors) ====
    import A from './a';
    import type { default as B } from './a';
    export { A, B };
    
==== /c.ts (0 errors) ====
    import * as types from './b';
    export { types as default };
    
==== /d.ts (4 errors) ====
    import types from './c';
    new types.A();
              ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 /a.ts:2:15: 'A' was exported here.
    new types.B();
              ~
!!! error TS1361: 'B' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /b.ts:2:15: 'B' was imported here.
    const a: types.A = {};
          ~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.
!!! related TS2728 /a.ts:1:11: 'a' is declared here.
    const b: types.B = {};
          ~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type 'A'.
!!! related TS2728 /a.ts:1:11: 'a' is declared here.
    